--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,27 @@
-# Compiled class file
-*.class
-
-# Log file
+# Random Files and Directories
+.*.swp
+._*
+.DS_Store
+.hg
+.lock-wscript
+.wafpickle-*
+config.gypi
 *.log
-
-# BlueJ files
 *.ctxt
+*.class
+hs_err_pid*
+target/
+dist/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Development Repositories
+CVS
+.svn
+.git
+.npmrc
+node_modules/
+nbproject/
 
-# Package Files #
+# Package Files
 *.jar
 *.war
 *.ear
@@ -18,5 +29,3 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
