--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   },
   "dependencies": {
     "antlr4": "^4.7.0",
+    "complex": "^3.0.1",
+    "decimal": "0.0.2",
+    "js-big-integer": "^1.0.2",
     "moment": "^2.19.1",
     "node-forge": "^0.7.1"
   }
