--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "antlr4": "^4.7.0",
-    "complex": "^3.0.1",
+    "complex.js": "^2.0.4",
     "decimal": "0.0.2",
     "js-big-integer": "^1.0.2",
     "moment": "^2.19.1",
