--- a/package.json
+++ b/package.json
@@ -33,9 +33,6 @@
     "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {
-    "antlr4": "^4.7.0",
-    "js-big-integer": "^1.0.2",
-    "moment": "^2.19.1",
-    "node-forge": "^0.7.1"
+    "antlr4": "^4.7.0"
   }
 }
