Refactored grammar slightly so that the body of a document can be either a component or a procedure. This eliminates the duplication between a task and a document.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bali-language",
   "version": "1.0.0",
-  "description": "This library provides a JavaScript based parser and formatter for the Bali Document Language™.",
+  "description": "This library provides a JavaScript based parser and formatter for the Bali Document Notation™.",
   "main": "Gruntfile.js",
   "repository": {
     "type": "git",
