--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bali-language",
+  "name": "bali-document-notation",
   "version": "1.0.0",
   "description": "This library provides a JavaScript based parser and formatter for the Bali Document Notation™.",
   "main": "Gruntfile.js",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/craterdog-bali/js-bali-language.git"
+    "url": "git+ssh://git@github.com/craterdog-bali/js-bali-document-notation.git"
   },
   "keywords": [
     "JavaScript",
@@ -16,9 +16,9 @@
   "author": "Derk Norton",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/craterdog-bali/js-bali-language/issues"
+    "url": "https://github.com/craterdog-bali/js-bali-document-notation/issues"
   },
-  "homepage": "https://github.com/craterdog-bali/js-bali-language#readme",
+  "homepage": "https://github.com/craterdog-bali/js-bali-document-notation#readme",
   "devDependencies": {
     "chai": "^4.1.2",
     "grunt": "^1.0.3",
