Moved pyramid diagram to docs directory.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "Bali Document Notation",
     "Primitive Types",
     "Collection Classes",
-    "Component Parser",
+    "Document Parser",
     "Component Formatter"
   ],
   "author": "Derk Norton",
