--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-component-framework",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "This library provides a JavaScript based implementation of the Bali Component Framework™.",
   "main": "index.js",
   "repository": {
@@ -10,7 +10,7 @@
   "keywords": [
     "JavaScript",
     "NodeJS",
-    "Bali Cloud Environment",
+    "Bali Nebula",
     "Bali Component Framework",
     "Bali Document Notation",
     "Primitive Types",
@@ -27,17 +27,17 @@
   },
   "homepage": "https://github.com/craterdog-bali/js-bali-component-framework#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "grunt": "^1.0.3",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
     "grunt-mocha-test": "^0.13.3",
     "mocha": "^5.2.0"
   },
   "dependencies": {
     "antlr4": "^4.7.1",
-    "moment": "^2.22.1"
+    "moment": "^2.22.2"
   }
 }
