--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "chai": "^4.2.0",
     "grunt": "^1.0.3",
     "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-jshint": "^2.0.0",
-    "grunt-contrib-uglify": "^4.0.0",
     "grunt-mocha-test": "^0.13.3",
-    "mocha": "^5.2.0"
+    "grunt-webpack": "^3.1.3",
+    "mocha": "^5.2.0",
+    "webpack": "^4.28.2"
   },
   "dependencies": {
     "antlr4": "^4.7.1",
