--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-component-framework",
-  "version": "2.17.0",
+  "version": "2.17.1",
   "description": "This library provides a JavaScript based implementation of the Bali Nebula™ Component Framework.",
   "main": "index.js",
   "repository": {
@@ -33,11 +33,11 @@
     "grunt-mocha-test": "^0.13.3",
     "grunt-webpack": "^3.1.3",
     "chai": "^4.2.0",
-    "mocha": "^7.1.1",
+    "mocha": "^7.1.2",
     "webpack": "^4.43.0"
   },
   "dependencies": {
     "antlr4": "^4.8.0",
-    "moment": "^2.24.0"
+    "moment": "2.24.0"
   }
 }
