--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,14 @@
 {
+    "parser": "babel-eslint",
+    "env" : {
+        "browser" : true,
+        "node" : true,
+        "es6" : true,
+        "es2017" : true,
+        "es2020" : true,
+        "es2021" : true
+    },
     "parserOptions": {
-        "ecmaVersion": 8
+        "sourceType": "module"
     }
 }
