--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
   },
   "homepage": "https://github.com/craterdog-bali/js-bali-component-framework#readme",
   "devDependencies": {
-    "grunt": "^1.1.0",
+    "babel-eslint": "^10.1.0",
+    "chai": "^4.2.0",
+    "grunt": "^1.3.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-eslint": "^23.0.0",
     "grunt-mocha-test": "^0.13.3",
-    "grunt-webpack": "^3.1.3",
-    "chai": "^4.2.0",
-    "mocha": "^7.2.0",
-    "webpack": "^4.43.0"
+    "grunt-webpack": "^4.0.2",
+    "mocha": "^8.2.1",
+    "webpack": "^5.11.0"
   },
   "dependencies": {
-    "antlr4": "^4.8.0",
-    "moment": "^2.26.0"
+    "antlr4": "^4.9.0",
+    "moment": "^2.29.1"
   }
 }
