--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,6 @@
 {
-    "parser": "babel-eslint",
-    "env" : {
-        "browser" : true,
-        "node" : true,
-        "es6" : true,
-        "es2017" : true,
-        "es2020" : true,
-        "es2021" : true
-    },
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 12
     }
 }
