All tests and webpack packaging are now working again with the latest versions of all dependencies except antr4 which forces ES6 modules after version 4.8.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "webpack": "^5.41.0"
   },
   "dependencies": {
-    "antlr4": "^4.9.2",
+    "antlr4": "4.8.0",
     "moment": "^2.29.1"
   }
 }
