--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bali-component-framework",
-  "version": "2.82.0",
+  "version": "2.83.0",
   "description": "This library provides a JavaScript based implementation of the Bali Nebula™ Component Framework.",
   "main": "index.js",
   "repository": {
@@ -37,7 +37,6 @@
     "webpack": "^5.52.1"
   },
   "dependencies": {
-    "antlr4": "4.8.0",
-    "moment": "^2.29.1"
+    "antlr4": "4.8.0"
   }
 }
