--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   },
   "homepage": "https://github.com/craterdog-bali/js-bali-component-framework#readme",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "grunt": "^1.4.1",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-eslint": "^23.0.0",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "webpack": "^5.72.1",
+    "grunt": "^1.5.3",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-eslint": "^24.0.0",
     "grunt-mocha-test": "^0.13.3",
-    "grunt-webpack": "^4.0.3",
-    "mocha": "^9.1.1",
-    "webpack": "^5.52.1"
+    "grunt-webpack": "^5.0.0"
   },
   "dependencies": {
     "antlr4": "4.8.0"
